@@ -21,7 +21,6 @@ import org.gradle.api.JavaVersion
 import org.gradle.integtests.fixtures.ToBeFixedForConfigurationCache
 import org.gradle.internal.os.OperatingSystem
 import org.gradle.testkit.runner.BuildResult
-import org.gradle.testkit.runner.internal.DefaultGradleRunner
 
 class ThirdPartyGradleModuleMetadataSmokeTest extends AbstractSmokeTest {
 
@@ -35,24 +34,24 @@ class ThirdPartyGradleModuleMetadataSmokeTest extends AbstractSmokeTest {
         BuildResult result
         useSample("gmm-example")
         def kotlinVersion = TestedVersions.kotlin.latestStartsWith("1.4")
-        def androidPluginVersion = AGP_VERSIONS.getLatestOfMinor("4.1")
+        def androidPluginVersion = AGP_VERSIONS.getLatestOfMinor("4.2")
         def arch = OperatingSystem.current().macOsX ? 'MacosX64' : 'LinuxX64'
 
-        def expectedMetadata = new File(testProjectDir.root, 'expected-metadata')
-        def actualRepo = new File(testProjectDir.root, 'producer/repo')
+        def expectedMetadata = new File(testProjectDir, 'expected-metadata')
+        def actualRepo = new File(testProjectDir, 'producer/repo')
 
         when:
-        buildFile = new File(testProjectDir.root, "producer/${defaultBuildFileName}.kts")
+        buildFile = new File(testProjectDir, "producer/${defaultBuildFileName}.kts")
         replaceVariablesInBuildFile(
             kotlinVersion: kotlinVersion,
             androidPluginVersion: androidPluginVersion)
-        publish()
+        publish(kotlinVersion, androidPluginVersion)
 
         then:
         actualRepo.eachFileRecurse { actual ->
             def expected = new File(expectedMetadata, actual.name)
             if (expected.name.endsWith('.pom')) {
-                assert expected.text == actual.text : "content mismatch: ${actual.name}]"
+                assert expected.text == actual.text: "content mismatch: ${actual.name}]"
             }
             if (expected.name.endsWith('.module')) {
                 compareJson(expected, actual)
@@ -60,7 +59,7 @@ class ThirdPartyGradleModuleMetadataSmokeTest extends AbstractSmokeTest {
         }
 
         when:
-        buildFile = new File(testProjectDir.root, "consumer/${defaultBuildFileName}.kts")
+        buildFile = new File(testProjectDir, "consumer/${defaultBuildFileName}.kts")
         replaceVariablesInBuildFile(
             kotlinVersion: kotlinVersion,
             androidPluginVersion: androidPluginVersion)
@@ -113,38 +112,56 @@ class ThirdPartyGradleModuleMetadataSmokeTest extends AbstractSmokeTest {
         ]
     }
 
-    private List<String> trimmedOutput(BuildResult result) {
-        result.output.split('\n').findAll { !it.empty && !it.contains('warning') }
+    private static List<String> trimmedOutput(BuildResult result) {
+        result.output.split('\n').findAll { !it.empty && !it.toLowerCase().contains('warning') }
     }
 
-    private BuildResult publish() {
-        runner('publish').withProjectDir(
-            new File(testProjectDir.root, 'producer')).forwardOutput().build()
+    private static SmokeTestGradleRunner setIllegalAccessPermitForJDK16KotlinCompilerDaemonOptions(SmokeTestGradleRunner runner) {
+        if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_16)) {
+            // https://youtrack.jetbrains.com/issue/KT-44266#focus=Comments-27-4639508.0-0
+            runner.withJvmArguments("-Dkotlin.daemon.jvm.options=" +
+                "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED," +
+                "--add-opens=java.base/java.util=ALL-UNNAMED")
+        }
+        return runner
+    }
+
+    private BuildResult publish(String kotlinVersion, String agpVersion) {
+        return setIllegalAccessPermitForJDK16KotlinCompilerDaemonOptions(runner('publish'))
+            .withProjectDir(new File(testProjectDir, 'producer'))
+            .forwardOutput()
+            .deprecations(KotlinMultiPlatformDeprecations) {
+                expectKotlinJsCompileDestinationDirPropertyDeprecation(kotlinVersion)
+                expectAndroidFileTreeForEmptySourcesDeprecationWarnings(agpVersion, "sourceFiles", "sourceDirs", "inputFiles", "projectNativeLibs")
+                expectKotlinIncrementalTaskInputsDeprecation(kotlinVersion)
+                expectAndroidIncrementalTaskInputsDeprecation(agpVersion)
+            }.build()
     }
 
     private BuildResult consumer(String runTask) {
-        runner(runTask, '-q').withProjectDir(
-            new File(testProjectDir.root, 'consumer')).forwardOutput().build()
+        setIllegalAccessPermitForJDK16KotlinCompilerDaemonOptions(runner(runTask, '-q'))
+            .withProjectDir(new File(testProjectDir, 'consumer'))
+            .forwardOutput()
+            .build()
     }
 
-    // Reevaluate if this is still needed when upgrading android plugin. Currently required with version 4.1.2
+    // Reevaluate if this is still needed when upgrading android plugin. Currently required with version 4.2.2
     private BuildResult consumerWithJdk16WorkaroundForAndroidManifest(String runTask) {
         def runner = runner(runTask, '-q')
-            .withProjectDir(new File(testProjectDir.root, 'consumer'))
-            .forwardOutput() as DefaultGradleRunner
+            .withProjectDir(new File(testProjectDir, 'consumer'))
+            .forwardOutput()
         if (JavaVersion.current().isJava9Compatible()) {
             runner.withJvmArguments("--add-opens", "java.base/java.io=ALL-UNNAMED")
         }
         return runner.build()
     }
 
-
     private static compareJson(File expected, File actual) {
         def actualJson = removeChangingDetails(new JsonSlurper().parseText(actual.text), actual.name)
         def expectedJson = removeChangingDetails(new JsonSlurper().parseText(expected.text), actual.name)
         assert actualJson.formatVersion == expectedJson.formatVersion
-        assert actualJson.component == expectedJson.component : "component content mismatch: ${actual.name}"
-        assert actualJson.variants as Set == expectedJson.variants as Set : "variants content mismatch: ${actual.name}"
+        assert actualJson.component == expectedJson.component: "component content mismatch: ${actual.name}"
+        assert actualJson.variants as Set == expectedJson.variants as Set: "variants content mismatch: ${actual.name}"
     }
 
     private static removeChangingDetails(moduleRoot, String metadataFileName) {
@@ -162,5 +179,11 @@ class ThirdPartyGradleModuleMetadataSmokeTest extends AbstractSmokeTest {
         }
 
         moduleRoot
+    }
+
+    static class KotlinMultiPlatformDeprecations extends BaseDeprecations implements WithKotlinDeprecations, WithAndroidDeprecations {
+        KotlinMultiPlatformDeprecations(SmokeTestGradleRunner runner) {
+            super(runner)
+        }
     }
 }
